--- a/index.html
+++ b/index.html
@@ -147,140 +147,6 @@
             <p class="discount">Скидка 20% по промокоду "АС КАСКАД"</p>
           </div>
         </section>
-        <section class="work-process">
-          <div class="services-top">
-            <div class="services-top-content">
-              <h1 class="work-title">Процесс работы</h1>
-              <p class="work-subtitle">
-                Техническое обслуживание и ремонт автомобилей, проведение
-                диагностики
-              </p>
-            </div>
-            <div class="carousel-nav">
-              <button class="carousel-btn" id="prevBtn">
-                <svg
-                  width="28"
-                  height="28"
-                  viewBox="0 0 28 28"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M20 14H8M14 8L8 14L14 20"
-                    stroke="white"
-                    stroke-width="1.8"
-                    stroke-linecap="round"
-                  />
-                </svg>
-              </button>
-              <button class="carousel-btn" id="nextBtn">
-                <svg
-                  width="28"
-                  height="28"
-                  viewBox="0 0 28 28"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M8 14H20M14 8L20 14L14 20"
-                    stroke="white"
-                    stroke-width="1.8"
-                    stroke-linecap="round"
-                  />
-                </svg>
-              </button>
-            </div>
-          </div>
-          <div class="services-carousel">
-            <div
-              class="services-container work-container"
-              id="servicesContainer"
-            >
-              <div class="service-card work-card">
-                <img src="./src/img/kaskad/hero1.jpg" alt="" />
-                <h3>Двигун</h3>
-                <p>
-                  Комплекс работ по диагностике автомобиля в целом или отдельных
-                  его агрегатов, регулировке систем/узлов, выполнению работ по
-                  регламентной замене деталей и/или технических жидкостей
-                </p>
-              </div>
-              <div class="service-card work-card">
-                <img src="./src/img/kaskad/hero1.jpg" alt="" />
-                <h3>Ходова частина</h3>
-                <p>
-                  Комплекс работ по диагностике автомобиля в целом или отдельных
-                  его агрегатов, регулировке систем/узлов, выполнению работ по
-                  регламентной замене деталей и/или технических жидкостей
-                </p>
-              </div>
-              <div class="service-card work-card">
-                <img src="./src/img/kaskad/hero1.jpg" alt="" />
-                <h3>Електрика</h3>
-                <p>
-                  Комплекс работ по диагностике автомобиля в целом или отдельных
-                  его агрегатов, регулировке систем/узлов, выполнению работ по
-                  регламентной замене деталей и/или технических жидкостей
-                </p>
-              </div>
-              <div class="service-card work-card">
-                <img src="./src/img/kaskad/hero1.jpg" alt="" />
-                <h3>Гальмівна система</h3>
-                <p>
-                  Комплекс работ по диагностике автомобиля в целом или отдельных
-                  его агрегатов, регулировке систем/узлов, выполнению работ по
-                  регламентной замене деталей и/или технических жидкостей
-                </p>
-              </div>
-              <div class="service-card work-card">
-                <img src="./src/img/kaskad/hero1.jpg" alt="" />
-                <h3>Трансмісія</h3>
-                <p>
-                  Комплекс работ по диагностике автомобиля в целом или отдельных
-                  его агрегатов, регулировке систем/узлов, выполнению работ по
-                  регламентной замене деталей и/или технических жидкостей
-                </p>
-              </div>
-              <div class="service-card work-card">
-                <img src="./src/img/kaskad/hero1.jpg" alt="" />
-                <h3>Технічне обслуговування</h3>
-                <p>
-                  Комплекс работ по диагностике автомобиля в целом или отдельных
-                  его агрегатов, регулировке систем/узлов, выполнению работ по
-                  регламентной замене деталей и/или технических жидкостей
-                </p>
-              </div>
-              <div class="service-card work-card">
-                <img src="./src/img/kaskad/hero1.jpg" alt="" />
-                <h3>Обслуговуються марки</h3>
-                <p>
-                  Комплекс работ по диагностике автомобиля в целом или отдельных
-                  его агрегатов, регулировке систем/узлов, выполнению работ по
-                  регламентной замене деталей и/или технических жидкостей
-                </p>
-              </div>
-              <div class="service-card work-card">
-                <img src="./src/img/kaskad/hero1.jpg" alt="" />
-                <h3>Діагностика</h3>
-                <p>
-                  Комплекс работ по диагностике автомобиля в целом или отдельных
-                  его агрегатов, регулировке систем/узлов, выполнению работ по
-                  регламентной замене деталей и/или технических жидкостей
-                </p>
-              </div>
-              <div class="service-card work-card">
-                <img src="./src/img/kaskad/hero1.jpg" alt="" />
-                <h3>Чіп тюнінг</h3>
-                <p>
-                  Комплекс работ по диагностике автомобиля в целом или отдельных
-                  его агрегатов, регулировке систем/узлов, выполнению работ по
-                  регламентной замене деталей и/или технических жидкостей
-                </p>
-              </div>
-            </div>
-          </div>
-        </section>
-        <section></section>
         <section class="services-section">
           <div class="services-top">
             <div class="services-top-content">
@@ -430,6 +296,139 @@
             </div>
           </div>
         </section>
+        <section class="work-process">
+          <div class="services-top">
+            <div class="services-top-content">
+              <h1 class="work-title">Процесс работы</h1>
+              <p class="work-subtitle">
+                Техническое обслуживание и ремонт автомобилей, проведение
+                диагностики
+              </p>
+            </div>
+            <div class="carousel-nav">
+              <button class="carousel-btn" id="prevBtn">
+                <svg
+                  width="28"
+                  height="28"
+                  viewBox="0 0 28 28"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M20 14H8M14 8L8 14L14 20"
+                    stroke="white"
+                    stroke-width="1.8"
+                    stroke-linecap="round"
+                  />
+                </svg>
+              </button>
+              <button class="carousel-btn" id="nextBtn">
+                <svg
+                  width="28"
+                  height="28"
+                  viewBox="0 0 28 28"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M8 14H20M14 8L20 14L14 20"
+                    stroke="white"
+                    stroke-width="1.8"
+                    stroke-linecap="round"
+                  />
+                </svg>
+              </button>
+            </div>
+          </div>
+          <div class="services-carousel">
+            <div
+              class="services-container work-container"
+              id="servicesContainer"
+            >
+              <div class="service-card work-card">
+                <img src="./src/img/kaskad/hero1.jpg" alt="" />
+                <h3>Двигун</h3>
+                <p>
+                  Комплекс работ по диагностике автомобиля в целом или отдельных
+                  его агрегатов, регулировке систем/узлов, выполнению работ по
+                  регламентной замене деталей и/или технических жидкостей
+                </p>
+              </div>
+              <div class="service-card work-card">
+                <img src="./src/img/kaskad/hero1.jpg" alt="" />
+                <h3>Ходова частина</h3>
+                <p>
+                  Комплекс работ по диагностике автомобиля в целом или отдельных
+                  его агрегатов, регулировке систем/узлов, выполнению работ по
+                  регламентной замене деталей и/или технических жидкостей
+                </p>
+              </div>
+              <div class="service-card work-card">
+                <img src="./src/img/kaskad/hero1.jpg" alt="" />
+                <h3>Електрика</h3>
+                <p>
+                  Комплекс работ по диагностике автомобиля в целом или отдельных
+                  его агрегатов, регулировке систем/узлов, выполнению работ по
+                  регламентной замене деталей и/или технических жидкостей
+                </p>
+              </div>
+              <div class="service-card work-card">
+                <img src="./src/img/kaskad/hero1.jpg" alt="" />
+                <h3>Гальмівна система</h3>
+                <p>
+                  Комплекс работ по диагностике автомобиля в целом или отдельных
+                  его агрегатов, регулировке систем/узлов, выполнению работ по
+                  регламентной замене деталей и/или технических жидкостей
+                </p>
+              </div>
+              <div class="service-card work-card">
+                <img src="./src/img/kaskad/hero1.jpg" alt="" />
+                <h3>Трансмісія</h3>
+                <p>
+                  Комплекс работ по диагностике автомобиля в целом или отдельных
+                  его агрегатов, регулировке систем/узлов, выполнению работ по
+                  регламентной замене деталей и/или технических жидкостей
+                </p>
+              </div>
+              <div class="service-card work-card">
+                <img src="./src/img/kaskad/hero1.jpg" alt="" />
+                <h3>Технічне обслуговування</h3>
+                <p>
+                  Комплекс работ по диагностике автомобиля в целом или отдельных
+                  его агрегатов, регулировке систем/узлов, выполнению работ по
+                  регламентной замене деталей и/или технических жидкостей
+                </p>
+              </div>
+              <div class="service-card work-card">
+                <img src="./src/img/kaskad/hero1.jpg" alt="" />
+                <h3>Обслуговуються марки</h3>
+                <p>
+                  Комплекс работ по диагностике автомобиля в целом или отдельных
+                  его агрегатов, регулировке систем/узлов, выполнению работ по
+                  регламентной замене деталей и/или технических жидкостей
+                </p>
+              </div>
+              <div class="service-card work-card">
+                <img src="./src/img/kaskad/hero1.jpg" alt="" />
+                <h3>Діагностика</h3>
+                <p>
+                  Комплекс работ по диагностике автомобиля в целом или отдельных
+                  его агрегатов, регулировке систем/узлов, выполнению работ по
+                  регламентной замене деталей и/или технических жидкостей
+                </p>
+              </div>
+              <div class="service-card work-card">
+                <img src="./src/img/kaskad/hero1.jpg" alt="" />
+                <h3>Чіп тюнінг</h3>
+                <p>
+                  Комплекс работ по диагностике автомобиля в целом или отдельных
+                  его агрегатов, регулировке систем/узлов, выполнению работ по
+                  регламентной замене деталей и/или технических жидкостей
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
         <section id="callback" class="callback-section">
           <h2 class="callback-main-title">Наши специалисты</h2>
           <div class="callback-section-container">
@@ -496,6 +495,59 @@
               <p class="cb-last-text">
                 Вы можете указать марку и модель авто и оставить Ваши контакты -
                 мы вам перезвоним
+              </p>
+            </div>
+          </div>
+        </section>
+        <section class="benefits-section">
+          <h2 class="benefits-title">
+            Почему <span class="span-benefits-title"> выбирают нас</span>
+          </h2>
+          <div class="benefits-containers">
+            <div class="benefits-container">
+              <div class="benefits-top">
+                <p class="benefits-number">1</p>
+                <p class="benefits-top-text">
+                  Гарантия на выполненные работы до 24 мес
+                </p>
+              </div>
+              <img
+                class="benefits-img"
+                src="./src/img/kaskad/hero1.jpg"
+                alt=""
+              />
+              <p class="benefits-bot-text">Оснащен современным оборудованием</p>
+            </div>
+            <div class="benefits-container">
+              <div class="benefits-top">
+                <p class="benefits-number">2</p>
+                <p class="benefits-top-text">
+                  Профессиональное диагностическое оборудование
+                </p>
+              </div>
+              <img
+                class="benefits-img"
+                src="./src/img/kaskad/hero1.jpg"
+                alt=""
+              />
+              <p class="benefits-bot-text">
+                Качественные, рекомендованные производителем запчасти
+              </p>
+            </div>
+            <div class="benefits-container">
+              <div class="benefits-top">
+                <p class="benefits-number">3</p>
+                <p class="benefits-top-text">
+                  Скидки подписчикам и по промокоду
+                </p>
+              </div>
+              <img
+                class="benefits-img"
+                src="./src/img/kaskad/hero1.jpg"
+                alt=""
+              />
+              <p class="benefits-bot-text">
+                Квалифицированные специалисты с опытом
               </p>
             </div>
           </div>
