--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     <link rel="stylesheet" href="./src/js/language.js" />
   </head>
   <header>
+    <div class="burger-menu">
+      <div class="burger-line"></div>
+      <div class="burger-line"></div>
+      <div class="burger-line"></div>
+    </div>
     <div class="header">
       <nav>
         <ul class="nav-list-header">
@@ -496,6 +501,7 @@
                 Вы можете указать марку и модель авто и оставить Ваши контакты -
                 мы вам перезвоним
               </p>
+              <p id="responseMessage" class="response-message"></p>
             </div>
           </div>
         </section>
