--- a/index.html
+++ b/index.html
@@ -28,24 +28,28 @@
       <nav class="nav">
         <ul class="nav-list-header">
           <li class="nav-item dropdown">
-            <a href="#">Услуги</a>
+            <a href="">Услуги</a>
             <ul class="dropdown-content">
-              <li><a href="#">Двигун</a></li>
-              <li><a href="#">Ходова частина</a></li>
-              <li><a href="#">Електрика</a></li>
-              <li><a href="#">Гальмівна система</a></li>
-              <li><a href="#">Трансмісія</a></li>
-              <li><a href="#">Технічне обслуговування</a></li>
-              <li><a href="#">Обслуговуються марки</a></li>
-              <li><a href="#">Діагностика</a></li>
-              <li><a href="#">Чіп тюнінг</a></li>
+              <li><a href="">Двигун</a></li>
+              <li><a href="">Ходова частина</a></li>
+              <li><a href="">Електрика</a></li>
+              <li><a href="">Гальмівна система</a></li>
+              <li><a href="">Трансмісія</a></li>
+              <li><a href="">Технічне обслуговування</a></li>
+              <li><a href="">Обслуговуються марки</a></li>
+              <li><a href="">Діагностика</a></li>
+              <li><a href="">Чіп тюнінг</a></li>
             </ul>
           </li>
-          <li class="nav-item"><a href="#">Почему мы</a></li>
-          <li class="nav-item"><a href="#">Специалисты</a></li>
-          <li class="nav-item"><a href="#">Фотогаллерея</a></li>
-          <li class="nav-item"><a href="#">Отзывы</a></li>
-          <li class="nav-item"><a href="#map-section">Контакты</a></li>
+          <li class="nav-item"><a href="./price.html">Цены</a></li>
+          <li class="nav-item"><a href="">Почему мы</a></li>
+          <li class="nav-item">
+            <a href="./src/partials/hero.html">Специалисты</a>
+          </li>
+          <li class="nav-item"><a href="">Фотогаллерея</a></li>
+          <li class="nav-item">
+            <a href="">Контакты</a>
+          </li>
         </ul>
       </nav>
       <a href="./index.html"
