--- a/price.html
+++ b/price.html
@@ -159,7 +159,7 @@
         </section>
         <section class="price-section">
           <h2 class="price-title">Прайс-лист автосервиса — КАСКАД</h2>
-          <p>
+          <p class="price-content">
             Предлагаем вашему вниманию прайс-лист с ценами на услуги СТО в
             Павлограде — АС КАСКАД. Наш сервис специализируется на полном цикле
             ремонта Вашего авто. Это не полный список, но мы постарались собрать
@@ -171,8 +171,6 @@
             (095) 777 77 77, наши менеджеры ответят на все вопросы касающиеся
             вашего авто.
           </p>
-
-          <h1>Прайс-лист автосервісу</h1>
 
           <h2>Діагностика автомобіля</h2>
 
