--- a/price.html
+++ b/price.html
@@ -48,7 +48,7 @@
           </li>
           <li class="nav-item"><a href="">Фотогаллерея</a></li>
           <li class="nav-item">
-            <a href="">Контакты</a>
+            <a href="./contacts.html">Контакты</a>
           </li>
         </ul>
       </nav>
@@ -91,62 +91,9 @@
   <body>
     <main>
       <div class="container">
-        <section class="hero">
+        <section class="hero-price-section">
           <div class="hero-content">
-            <h1 class="hero-title">РЕМОНТ И ОБСЛУЖИВАНИЕ АВТО</h1>
-            <div class="hero-content-container">
-              <div>
-                <svg
-                  width="28"
-                  height="28"
-                  viewBox="0 0 28 28"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M8 14H20M14 8L20 14L14 20"
-                    stroke="white"
-                    stroke-width="1.8"
-                    stroke-linecap="round"
-                  />
-                </svg>
-                <p>лучшее соотношение цена/качество</p>
-              </div>
-              <div>
-                <svg
-                  width="28"
-                  height="28"
-                  viewBox="0 0 28 28"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M8 14H20M14 8L20 14L14 20"
-                    stroke="white"
-                    stroke-width="1.8"
-                    stroke-linecap="round"
-                  />
-                </svg>
-                <p>гарантии на все виды работ</p>
-              </div>
-              <div>
-                <svg
-                  width="28"
-                  height="28"
-                  viewBox="0 0 28 28"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M8 14H20M14 8L20 14L14 20"
-                    stroke="white"
-                    stroke-width="1.8"
-                    stroke-linecap="round"
-                  />
-                </svg>
-                <p>оригинальные запчасти</p>
-              </div>
-            </div>
+            <h1 class="hero-title">Прайс-лист автосервиса — КАСКАД</h1>
             <button
               type="button"
               onclick="window.location.href='#callbackForm'"
@@ -154,22 +101,27 @@
             >
               ЗАПИСАТЬСЯ
             </button>
-            <p class="discount">Скидка 20% по промокоду "АС КАСКАД"</p>
+            <p class="discount">
+              Скидка 50% на первую диагностику по промокоду "АС КАСКАД"
+            </p>
           </div>
         </section>
         <section class="price-section">
-          <h2 class="price-title">Прайс-лист автосервиса — КАСКАД</h2>
           <p class="price-content">
             Предлагаем вашему вниманию прайс-лист с ценами на услуги СТО в
             Павлограде — АС КАСКАД. Наш сервис специализируется на полном цикле
-            ремонта Вашего авто. Это не полный список, но мы постарались собрать
-            самые востребованные виды работ, отталкиваясь из нашего опыта и
-            запросов клиентов. На данной странице Вы можете найти большинство
-            вид услуг по диагностике, техническому обслуживанию и ремонту
-            автомобилей. Если же Вы не находите в прайс-листе нужной вам услуги,
-            Вы можете связаться с нами по телефонам +38 (068) 777 77 77; +38
-            (095) 777 77 77, наши менеджеры ответят на все вопросы касающиеся
-            вашего авто.
+            ремонта Вашего авто.
+          </p>
+          <p class="price-content">
+            Это не полный список, но мы постарались собрать самые востребованные
+            виды работ, отталкиваясь из нашего опыта и запросов клиентов.
+          </p>
+          <p class="price-content">
+            На данной странице Вы можете найти большинство вид услуг по
+            диагностике, техническому обслуживанию и ремонту автомобилей. Если
+            же Вы не находите в прайс-листе нужной вам услуги, Вы можете
+            связаться с нами по телефонам +38 (068) 777 77 77; +38 (095) 777 77
+            77, наши менеджеры ответят на все вопросы касающиеся вашего авто.
           </p>
 
           <h2>Діагностика автомобіля</h2>
@@ -1197,6 +1149,339 @@
               </tr>
             </tbody>
           </table>
+        </section>
+        <section class="work-process">
+          <div class="services-top">
+            <div class="services-top-content">
+              <h1 class="work-title">Процесс работы</h1>
+              <p class="work-subtitle">
+                Техническое обслуживание и ремонт автомобилей, проведение
+                диагностики
+              </p>
+            </div>
+            <div class="carousel-nav">
+              <button class="carousel-btn" id="prevBtn">
+                <svg
+                  width="28"
+                  height="28"
+                  viewBox="0 0 28 28"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M20 14H8M14 8L8 14L14 20"
+                    stroke="white"
+                    stroke-width="1.8"
+                    stroke-linecap="round"
+                  />
+                </svg>
+              </button>
+              <button class="carousel-btn" id="nextBtn">
+                <svg
+                  width="28"
+                  height="28"
+                  viewBox="0 0 28 28"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M8 14H20M14 8L20 14L14 20"
+                    stroke="white"
+                    stroke-width="1.8"
+                    stroke-linecap="round"
+                  />
+                </svg>
+              </button>
+            </div>
+          </div>
+          <div class="services-carousel">
+            <div
+              class="services-container work-container"
+              id="servicesContainer"
+            >
+              <div class="service-card work-card">
+                <img src="./src/img/kaskad/hero1.jpg" alt="" />
+                <h3>Двигун</h3>
+                <p>
+                  Комплекс работ по диагностике автомобиля в целом или отдельных
+                  его агрегатов, регулировке систем/узлов, выполнению работ по
+                  регламентной замене деталей и/или технических жидкостей
+                </p>
+              </div>
+              <div class="service-card work-card">
+                <img src="./src/img/kaskad/hero1.jpg" alt="" />
+                <h3>Ходова частина</h3>
+                <p>
+                  Комплекс работ по диагностике автомобиля в целом или отдельных
+                  его агрегатов, регулировке систем/узлов, выполнению работ по
+                  регламентной замене деталей и/или технических жидкостей
+                </p>
+              </div>
+              <div class="service-card work-card">
+                <img src="./src/img/kaskad/hero1.jpg" alt="" />
+                <h3>Електрика</h3>
+                <p>
+                  Комплекс работ по диагностике автомобиля в целом или отдельных
+                  его агрегатов, регулировке систем/узлов, выполнению работ по
+                  регламентной замене деталей и/или технических жидкостей
+                </p>
+              </div>
+              <div class="service-card work-card">
+                <img src="./src/img/kaskad/hero1.jpg" alt="" />
+                <h3>Гальмівна система</h3>
+                <p>
+                  Комплекс работ по диагностике автомобиля в целом или отдельных
+                  его агрегатов, регулировке систем/узлов, выполнению работ по
+                  регламентной замене деталей и/или технических жидкостей
+                </p>
+              </div>
+              <div class="service-card work-card">
+                <img src="./src/img/kaskad/hero1.jpg" alt="" />
+                <h3>Трансмісія</h3>
+                <p>
+                  Комплекс работ по диагностике автомобиля в целом или отдельных
+                  его агрегатов, регулировке систем/узлов, выполнению работ по
+                  регламентной замене деталей и/или технических жидкостей
+                </p>
+              </div>
+              <div class="service-card work-card">
+                <img src="./src/img/kaskad/hero1.jpg" alt="" />
+                <h3>Технічне обслуговування</h3>
+                <p>
+                  Комплекс работ по диагностике автомобиля в целом или отдельных
+                  его агрегатов, регулировке систем/узлов, выполнению работ по
+                  регламентной замене деталей и/или технических жидкостей
+                </p>
+              </div>
+              <div class="service-card work-card">
+                <img src="./src/img/kaskad/hero1.jpg" alt="" />
+                <h3>Обслуговуються марки</h3>
+                <p>
+                  Комплекс работ по диагностике автомобиля в целом или отдельных
+                  его агрегатов, регулировке систем/узлов, выполнению работ по
+                  регламентной замене деталей и/или технических жидкостей
+                </p>
+              </div>
+              <div class="service-card work-card">
+                <img src="./src/img/kaskad/hero1.jpg" alt="" />
+                <h3>Діагностика</h3>
+                <p>
+                  Комплекс работ по диагностике автомобиля в целом или отдельных
+                  его агрегатов, регулировке систем/узлов, выполнению работ по
+                  регламентной замене деталей и/или технических жидкостей
+                </p>
+              </div>
+              <div class="service-card work-card">
+                <img src="./src/img/kaskad/hero1.jpg" alt="" />
+                <h3>Чіп тюнінг</h3>
+                <p>
+                  Комплекс работ по диагностике автомобиля в целом или отдельных
+                  его агрегатов, регулировке систем/узлов, выполнению работ по
+                  регламентной замене деталей и/или технических жидкостей
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section id="brend" class="brend-section">
+          <h2 class="brend-title">СТО в Павлограде</h2>
+          <div class="infinite-carousel">
+            <div class="carousel-track">
+              <div>
+                <img src="./img/avto-logo/3037-256x256x32.png" alt="acura" />
+                <p class="text-brend">acura</p>
+              </div>
+              <div>
+                <img
+                  src="./src/img/avto-logo/4226-256x256x8.png"
+                  alt="daewoo"
+                />
+                <p class="text-brend">daewoo</p>
+              </div>
+              <div>
+                <img
+                  src="./src/img/avto-logo/4227-256x256x32.png"
+                  alt="daihatsu"
+                />
+                <p class="text-brend">daihatsu</p>
+              </div>
+              <div>
+                <img src="./src/img/avto-logo/acura_logo.png" alt="acura" />
+                <p class="text-brend">acura</p>
+              </div>
+              <div>
+                <img
+                  src="./src/img/avto-logo/acura_logo.png"
+                  alt="alfa-romeo"
+                />
+                <p class="text-brend">alfa-romeo</p>
+              </div>
+              <div>
+                <img src="./src/img/avto-logo/audi.png" alt="audi" />
+                <p class="text-brend">audi</p>
+              </div>
+              <div>
+                <img
+                  src="./src/img/avto-logo/chevrolet-logo.png"
+                  alt="chevrolet"
+                />
+                <p class="text-brend">chevrolet</p>
+              </div>
+              <div>
+                <img src="./src/img/avto-logo/daewoo-logo.png" alt="daewoo" />
+                <p class="text-brend">daewoo</p>
+              </div>
+              <div>
+                <img src="./src/img/avto-logo/citroen-logo.jpg" alt="citroen" />
+                <p class="text-brend">citroen</p>
+              </div>
+              <div>
+                <img src="./src/img/avto-logo/dodge-logo.png" alt="dodge" />
+                <p class="text-brend">dodge</p>
+              </div>
+              <div>
+                <img src="./src/img/avto-logo/fiat_logo.png" alt="fiat" />
+                <p class="text-brend">fiat</p>
+              </div>
+              <div>
+                <img src="./src/img/avto-logo/ford.png" alt="ford" />
+                <p class="text-brend">ford</p>
+              </div>
+              <div>
+                <img
+                  src="./src/img/avto-logo/honda-color-128.png"
+                  alt="honda"
+                />
+                <p class="text-brend">honda</p>
+              </div>
+              <div>
+                <img src="./src/img/avto-logo/hyundai-lg.png" alt="hyundai" />
+                <p class="text-brend">hyundai</p>
+              </div>
+              <div>
+                <img src="./src/img/avto-logo/infiniti.png" alt="infiniti" />
+                <p class="text-brend">infiniti</p>
+              </div>
+              <div>
+                <img src="./src/img/avto-logo/jaguar-logo.png" alt="jaguar" />
+                <p class="text-brend">jaguar</p>
+              </div>
+              <div>
+                <img src="./src/img/avto-logo/jeep-logo.png" alt="jeep" />
+                <p class="text-brend">jeep</p>
+              </div>
+              <div>
+                <img src="./src/img/avto-logo/kia_logo_256_003.png" alt="kia" />
+                <p class="text-brend">kia</p>
+              </div>
+              <div>
+                <img
+                  src="./src/img/avto-logo/land-rover1.png"
+                  alt="land-rover"
+                />
+                <p class="text-brend">land-rover</p>
+              </div>
+              <div>
+                <img src="./src/img/avto-logo/lexus-logo.png" alt="lexus" />
+                <p class="text-brend">lexus</p>
+              </div>
+              <div>
+                <img src="./src/img/avto-logo/lincoln-logo.png" alt="lincoln" />
+                <p class="text-brend">lincoln</p>
+              </div>
+              <div>
+                <img src="./src/img/avto-logo/logo_suzuki.png" alt="suzuki" />
+                <p class="text-brend">suzuki</p>
+              </div>
+              <div>
+                <img
+                  src="./src/img/avto-logo/mazda_logo_icon_by_mahesh69a-d473lkv.png"
+                  alt="mazda"
+                />
+                <p class="text-brend">mazda</p>
+              </div>
+              <div>
+                <img
+                  src="./src/img/avto-logo/mercedes_logo.png"
+                  alt="mercedes"
+                />
+                <p class="text-brend">mercedes</p>
+              </div>
+              <div>
+                <img
+                  src="./src/img/avto-logo/mitsubishi_logo.png"
+                  alt="mitsubishi"
+                />
+                <p class="text-brend">mitsubishi</p>
+              </div>
+              <div>
+                <img src="./src/img/avto-logo/nissan-logo-4.png" alt="nissan" />
+                <p class="text-brend">nissan</p>
+              </div>
+              <div>
+                <img
+                  src="./src/img/avto-logo/novosti-skoda-logo.gif"
+                  alt="skoda"
+                />
+                <p class="text-brend">skoda</p>
+              </div>
+              <div>
+                <img
+                  src="./src/img/avto-logo/opel-vectorlogo-dot-biz-128x128-1.png"
+                  alt="opel"
+                />
+                <p class="text-brend">opel</p>
+              </div>
+              <div>
+                <img
+                  src="./src/img/avto-logo/peugeot_logo_128.png"
+                  alt="peugeot"
+                />
+                <p class="text-brend">peugeot</p>
+              </div>
+              <div>
+                <img src="./src/img/avto-logo/renault_logo.png" alt="renault" />
+                <p class="text-brend">renault</p>
+              </div>
+              <div>
+                <img src="./src/img/avto-logo/saab-logo.png" alt="saab" />
+                <p class="text-brend">saab</p>
+              </div>
+              <div>
+                <img src="./src/img/avto-logo/seat.png" alt="seat" />
+                <p class="text-brend">seat</p>
+              </div>
+              <div>
+                <img src="./src/img/avto-logo/smart-logo.png" alt="smart" />
+                <p class="text-brend">smart</p>
+              </div>
+              <div>
+                <img
+                  src="./src/img/avto-logo/ssangyong-logo.png"
+                  alt="ssangyong"
+                />
+                <p class="text-brend">ssangyong</p>
+              </div>
+              <div>
+                <img
+                  src="./src/img/avto-logo/subaru-logo-transparent.png"
+                  alt="subaru"
+                />
+                <p class="text-brend">subaru</p>
+              </div>
+              <div>
+                <img src="./src/img/avto-logo/toyota.png" alt="toyota" />
+                <p class="text-brend">toyota</p>
+              </div>
+              <div>
+                <img
+                  src="./src/img/avto-logo/volkswagen_logo.png"
+                  alt="volkswagen"
+                />
+                <p class="text-brend">volkswagen</p>
+              </div>
+            </div>
+          </div>
         </section>
       </div>
       <script type="module" src="./src/js/main.js"></script>
