--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
           <li class="nav-item"><a href="./price.html">Цены</a></li>
           <li class="nav-item"><a href="">Почему мы</a></li>
           <li class="nav-item">
-            <a href="./src/partials/hero.html">Специалисты</a>
+            <a href="">Специалисты</a>
           </li>
           <li class="nav-item"><a href="">Фотогаллерея</a></li>
           <li class="nav-item">
-            <a href="">Контакты</a>
+            <a href="./contacts.html">Контакты</a>
           </li>
         </ul>
       </nav>
@@ -154,7 +154,9 @@
             >
               ЗАПИСАТЬСЯ
             </button>
-            <p class="discount">Скидка 20% по промокоду "АС КАСКАД"</p>
+            <p class="discount">
+              Скидка 50% на первую диагностику по промокоду "АС КАСКАД"
+            </p>
           </div>
         </section>
         <section class="services-section">
@@ -306,139 +308,7 @@
             </div>
           </div>
         </section>
-        <section class="work-process">
-          <div class="services-top">
-            <div class="services-top-content">
-              <h1 class="work-title">Процесс работы</h1>
-              <p class="work-subtitle">
-                Техническое обслуживание и ремонт автомобилей, проведение
-                диагностики
-              </p>
-            </div>
-            <div class="carousel-nav">
-              <button class="carousel-btn" id="prevBtn">
-                <svg
-                  width="28"
-                  height="28"
-                  viewBox="0 0 28 28"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M20 14H8M14 8L8 14L14 20"
-                    stroke="white"
-                    stroke-width="1.8"
-                    stroke-linecap="round"
-                  />
-                </svg>
-              </button>
-              <button class="carousel-btn" id="nextBtn">
-                <svg
-                  width="28"
-                  height="28"
-                  viewBox="0 0 28 28"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M8 14H20M14 8L20 14L14 20"
-                    stroke="white"
-                    stroke-width="1.8"
-                    stroke-linecap="round"
-                  />
-                </svg>
-              </button>
-            </div>
-          </div>
-          <div class="services-carousel">
-            <div
-              class="services-container work-container"
-              id="servicesContainer"
-            >
-              <div class="service-card work-card">
-                <img src="./src/img/kaskad/hero1.jpg" alt="" />
-                <h3>Двигун</h3>
-                <p>
-                  Комплекс работ по диагностике автомобиля в целом или отдельных
-                  его агрегатов, регулировке систем/узлов, выполнению работ по
-                  регламентной замене деталей и/или технических жидкостей
-                </p>
-              </div>
-              <div class="service-card work-card">
-                <img src="./src/img/kaskad/hero1.jpg" alt="" />
-                <h3>Ходова частина</h3>
-                <p>
-                  Комплекс работ по диагностике автомобиля в целом или отдельных
-                  его агрегатов, регулировке систем/узлов, выполнению работ по
-                  регламентной замене деталей и/или технических жидкостей
-                </p>
-              </div>
-              <div class="service-card work-card">
-                <img src="./src/img/kaskad/hero1.jpg" alt="" />
-                <h3>Електрика</h3>
-                <p>
-                  Комплекс работ по диагностике автомобиля в целом или отдельных
-                  его агрегатов, регулировке систем/узлов, выполнению работ по
-                  регламентной замене деталей и/или технических жидкостей
-                </p>
-              </div>
-              <div class="service-card work-card">
-                <img src="./src/img/kaskad/hero1.jpg" alt="" />
-                <h3>Гальмівна система</h3>
-                <p>
-                  Комплекс работ по диагностике автомобиля в целом или отдельных
-                  его агрегатов, регулировке систем/узлов, выполнению работ по
-                  регламентной замене деталей и/или технических жидкостей
-                </p>
-              </div>
-              <div class="service-card work-card">
-                <img src="./src/img/kaskad/hero1.jpg" alt="" />
-                <h3>Трансмісія</h3>
-                <p>
-                  Комплекс работ по диагностике автомобиля в целом или отдельных
-                  его агрегатов, регулировке систем/узлов, выполнению работ по
-                  регламентной замене деталей и/или технических жидкостей
-                </p>
-              </div>
-              <div class="service-card work-card">
-                <img src="./src/img/kaskad/hero1.jpg" alt="" />
-                <h3>Технічне обслуговування</h3>
-                <p>
-                  Комплекс работ по диагностике автомобиля в целом или отдельных
-                  его агрегатов, регулировке систем/узлов, выполнению работ по
-                  регламентной замене деталей и/или технических жидкостей
-                </p>
-              </div>
-              <div class="service-card work-card">
-                <img src="./src/img/kaskad/hero1.jpg" alt="" />
-                <h3>Обслуговуються марки</h3>
-                <p>
-                  Комплекс работ по диагностике автомобиля в целом или отдельных
-                  его агрегатов, регулировке систем/узлов, выполнению работ по
-                  регламентной замене деталей и/или технических жидкостей
-                </p>
-              </div>
-              <div class="service-card work-card">
-                <img src="./src/img/kaskad/hero1.jpg" alt="" />
-                <h3>Діагностика</h3>
-                <p>
-                  Комплекс работ по диагностике автомобиля в целом или отдельных
-                  его агрегатов, регулировке систем/узлов, выполнению работ по
-                  регламентной замене деталей и/или технических жидкостей
-                </p>
-              </div>
-              <div class="service-card work-card">
-                <img src="./src/img/kaskad/hero1.jpg" alt="" />
-                <h3>Чіп тюнінг</h3>
-                <p>
-                  Комплекс работ по диагностике автомобиля в целом или отдельных
-                  его агрегатов, регулировке систем/узлов, выполнению работ по
-                  регламентной замене деталей и/или технических жидкостей
-                </p>
-              </div>
-            </div>
-          </div>
-        </section>
+
         <section class="callback-section">
           <h2 class="callback-main-title">Наши специалисты</h2>
           <div class="callback-section-container">
