--- a/price.html
+++ b/price.html
@@ -27,24 +27,37 @@
 
       <nav class="nav">
         <ul class="nav-list-header">
+          <li class="nav-item"><a href="./price.html">Цены</a></li>
           <li class="nav-item dropdown">
-            <a href="">Услуги</a>
+            <a href="./service-catalog.html">Услуги</a>
             <ul class="dropdown-content">
-              <li><a href="">Двигун</a></li>
-              <li><a href="">Ходова частина</a></li>
-              <li><a href="">Електрика</a></li>
-              <li><a href="">Гальмівна система</a></li>
-              <li><a href="">Трансмісія</a></li>
-              <li><a href="">Технічне обслуговування</a></li>
-              <li><a href="">Обслуговуються марки</a></li>
+              <li><a href="./service-catalog.html#dvigatel">Двигун</a></li>
+              <li>
+                <a href="./service-catalog.html#hodovka">Ходова частина</a>
+              </li>
+              <li><a href="./service-catalog.html#electrika">Електрика</a></li>
+              <li>
+                <a href="./service-catalog.html#tormoznaja"
+                  >Гальмівна система</a
+                >
+              </li>
+              <li>
+                <a href="./service-catalog.html#transmisija">Трансмісія</a>
+              </li>
+              <li>
+                <a href="./service-catalog.html#servisnoe"
+                  >Технічне обслуговування</a
+                >
+              </li>
+              <li><a href="./service-catalog.html#gbo">ГБО</a></li>
               <li><a href="">Діагностика</a></li>
               <li><a href="">Чіп тюнінг</a></li>
             </ul>
           </li>
-          <li class="nav-item"><a href="./price.html">Цены</a></li>
+
           <li class="nav-item"><a href="">Почему мы</a></li>
           <li class="nav-item">
-            <a href="./src/partials/hero.html">Специалисты</a>
+            <a href="">Специалисты</a>
           </li>
           <li class="nav-item"><a href="">Фотогаллерея</a></li>
           <li class="nav-item">
@@ -107,22 +120,23 @@
           </div>
         </section>
         <section class="price-section">
-          <p class="price-content">
-            Предлагаем вашему вниманию прайс-лист с ценами на услуги СТО в
-            Павлограде — АС КАСКАД. Наш сервис специализируется на полном цикле
-            ремонта Вашего авто.
-          </p>
-          <p class="price-content">
-            Это не полный список, но мы постарались собрать самые востребованные
-            виды работ, отталкиваясь из нашего опыта и запросов клиентов.
-          </p>
-          <p class="price-content">
-            На данной странице Вы можете найти большинство вид услуг по
-            диагностике, техническому обслуживанию и ремонту автомобилей. Если
-            же Вы не находите в прайс-листе нужной вам услуги, Вы можете
-            связаться с нами по телефонам +38 (068) 777 77 77; +38 (095) 777 77
-            77, наши менеджеры ответят на все вопросы касающиеся вашего авто.
-          </p>
+          <div class="price-content-container">
+            <p class="price-content">
+              Предлагаем вашему вниманию прайс-лист с ценами на услуги СТО в
+              Павлограде — АС КАСКАД. Наш сервис специализируется на полном
+              цикле ремонта Вашего авто. Это не полный список, но мы постарались
+              собрать самые востребованные виды работ, отталкиваясь из нашего
+              опыта и запросов клиентов.
+            </p>
+            <p class="price-content">
+              На данной странице Вы можете найти большинство вид услуг по
+              диагностике, техническому обслуживанию и ремонту автомобилей. Если
+              же Вы не находите в прайс-листе нужной вам услуги, Вы можете
+              связаться с нами по телефонам +38 (068) 777 77 77; +38 (095) 777
+              77 77, наши менеджеры ответят на все вопросы касающиеся вашего
+              авто.
+            </p>
+          </div>
 
           <h2>Діагностика автомобіля</h2>
 
