--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
               <li><a href="">Чіп тюнінг</a></li>
             </ul>
           </li>
-
-          <li class="nav-item"><a href="">Почему мы</a></li>
           <li class="nav-item">
-            <a href="">Специалисты</a>
+            <a href="">Подбор запчастей</a>
           </li>
+          <li class="nav-item"><a href="">Установка ГБО</a></li>
+
           <li class="nav-item"><a href="">Фотогаллерея</a></li>
           <li class="nav-item">
             <a href="./contacts.html">Контакты</a>
