--- a/contacts.html
+++ b/contacts.html
@@ -57,7 +57,7 @@
 
           <li class="nav-item"><a href="">Почему мы</a></li>
           <li class="nav-item">
-            <a href="">Специалисты</a>
+            <a href="">Подбор запчастей</a>
           </li>
           <li class="nav-item"><a href="">Фотогаллерея</a></li>
           <li class="nav-item">
